--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1"
   }
